# internal-solutions-radiant-compass

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_STAGE_INSTRUCTIONS.md  COMPREHENSIVE_FEATURE_REQUIREMENTS.md  DEVELOPER_ONBOARDING_AUTONOMOUS_TOOLS.json  ENHANCED_CLAUDE_INTEGRATION.md  FRONTEND_DEBUG_LOG.md  GEMINI.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  TRANSFORMATION_STRATEGY.md  VOICE_CHAT_DEBUGGING_GUIDE.md  compose.yml  generate_avatar.py
.claude/: settings.local.json
.cursor/rules/: azure-deployment.mdc  nxt-humans-standards.mdc
backend/: pyproject.toml  requirements.txt  test_cors.py
backend/.cursor/rules/: fastapi-patterns.mdc
backend/app/: db.py  main.py  models.py  security.py
backend/app/routes/: ai_analysis.py  ai_chat.py  ai_copilot.py  avatar_streaming.py  awareness.py  care_circle.py  heygen.py  image_generation.py  insurance_navigator.py  journey.py  luxury_image_generation.py  medical_translation.py  provider_prophet.py  treatment_architect.py  tts_comparison.py  ultra_low_latency.py  videosdk.py
backend/migrations/: env.py
backend/migrations/versions/: a2f38a92357f_initial_migration.py
coagent-runtime/: .env.example  package-lock.json  package.json  tsconfig.json
design/: RadiantCompass Presentation Copy.docx
docker/: Dockerfile.backend  Dockerfile.coagent-runtime  Dockerfile.docs  Dockerfile.frontend
docs/: mkdocs.yml  requirements.txt
errors/: error_starting_app.rtf
frontend/: package-lock.json  package.json
radiant requirements/: RadiantCompass Patient Journey Map.html  radiant.docx  requirements.txt
(+77 files in other folders)
