[project]
name = "ai-assistant-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Chris Woodson",email = "chris.woodson@nxthumans.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (==0.115.12)",
    "uvicorn[standard] (==0.34.2)",
    "pydantic (==2.11.3)",
    "pydantic-settings (==2.9.1)",
    "httpx (==0.28.1)",
    "python-dotenv (==1.1.0)",
    "sqlmodel (==0.0.24)",
    "alembic (==1.15.2)",
    "asyncpg (==0.30.0)",
    "psycopg2-binary (==2.9.9)",
    "openai (==1.58.1)",
    "anthropic (==0.40.0)",
    "websockets (==13.1)",
    "aiofiles (>=24.1.0)",
    "python-multipart (==0.0.17)",
    "python-jose[cryptography] (>=3.3.0)",
    "httpx (>=0.28.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
autopep8 = "^2.3.2"
ruff = "^0.12.0"
isort = "^6.0.1"
pylint = "^3.3.7"
pre-commit = "^4.2.0"
pytest = "^8.4.1"

